--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -37,10 +37,10 @@ layout: default
           <!-- News -->
           {%- include news.html %}
           {%- endif %}
-          {% if page.selected_papers -%}
+          <!-- {% if page.selected_papers -%} -->
             <!-- Selected papers -->
             {%- include selected_papers.html %}
-          {%- endif %}
+          <!-- {%- endif %} -->
           {%- if page.social %}
           <!-- Social -->
           <div class="social">
