--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -23,13 +23,18 @@ body.sticky-bottom-footer {
 }
 
 .container {
-  max-width: $max-content-width;
+  // max-width: $max-content-width;
+  max-width: 95%;
+  
+  // max-width: 1000px;
+  margin-left: auto; /* Centers the content */
+  margin-right: auto; /* Centers the content */
 }
 
 // Profile
 .profile {
   img {
-    width: 100%;
+    width: 90%;
   }
 }
 
