Updated profile photo

--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -76,6 +76,7 @@
         </div>
 
       <div class="publication-links">
+        <a href="https://people.csail.mit.edu/zhizhenzhong/papers/2023_SIGCOMM_flexwan.pdf">Paper</a> | 
         <a href="https://conferences.sigcomm.org/events/apnet2023//slides/apnet23/Industry/miao_FlexWAN_APNET.pdf">Slides</a> | 
         <a href="https://www.youtube.com/watch?v=712VsqKW7-k">Video</a> | 
         <a href="https://github.com/congcongmiao/FlexWAN">Artifact</a> 
